<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Paomahui</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">请输入要发送的信息</string>
    <string name="button_send">发送</string>
    <string name="title_activity_display_message">我的消息</string>
    <string name="title_activity_loading">跑嘛会</string>
    <string name="action_search">搜索</string>
    <string name="radiobutton1">男</string>
    <string name="radiobutton2">女</string>
    <string name="title_activity_calender">会务论坛</string>
    <string name="action_calendar_activity">展会论坛</string>
    <string name="menu_settings">Settings</string>
    <string name="desc_previous_month">previous month</string>
    <string name="desc_next_month">next month</string>
    <string name="desc_today">return to today</string>
    <string name="desc_popup_menu">Popup menu</string>
    <string name="desc_cell_hint">cell hint</string>
    <string name="chinese_week">周</string>
    <string name="demo">demo</string>
    <string name="sunday">星期天</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>

    <string-array name="gregorianFestivals">
        <item>元旦</item>
        <item>情人节</item>
        <item>妇女节</item>
        <item>植树节</item>
        <item>消费者权益日</item>
        <item>愚人节</item>
        <item>国际劳动节</item>
        <item>国际儿童节</item>
        <item>教师节</item>
        <item>国庆节</item>
        <item>万圣节</item>
        <item>平安夜</item>
        <item>圣诞节</item>
    </string-array>

    <string name="title_activity_conf_show">会议详情</string>
    <string name="title_list">商务合作</string>
    <string name="title_search">探索</string>
    <string name="title_user">我的主页</string>
    <string name="title_activity_option">OptionActivity</string>
    <string name="title_activity_comment">CommentActivity</string>

</resources>
